--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4534745923773547"
      crossorigin="anonymous"></script>
-    <title>Leemart investments</title>
+    <title>Leemart investmentsc</title>
   </head>
   <body>
     <div id="root"></div>
